--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core Deep Learning
-tensorflow>=2.15.0
-keras>=2.15.0
+tensorflow>=2.13.0,<2.16.0
+keras>=2.13.0,<2.16.0
 
 # Audio Processing
 librosa>=0.10.0
@@ -13,7 +13,7 @@ nltk>=3.8.0
 
 # Machine Learning
 scikit-learn>=1.3.0
-numpy>=1.24.0
+numpy>=1.24.0,<2.0.0
 scipy>=1.11.0
 
 # Visualization
